<resources>
    <string name="app_name" translatable="false">AquaTrouble</string>
    <string name="choose_language" translatable="false">Limba preferata   Choose your language</string>
    <string name="hello_blank_fragment" translatable="false">Choose your language</string>
    <string name="welcomeText">Bine ai venit la,</string>
    <string name="appDescr">"aplicația ce îți face viața mai usoară. "</string>
    <string name="acceptCheckBox">Accept termenii și condițile</string>
    <string name="tosText">Termenii și condițile</string>
    <string name="continueButton">Continuă</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="interstitial_ad_sample" translatable="false">Interstitial Ad Sample</string>
    <string name="start_level" translatable="false">Level 1</string>
    <string name="next_level" translatable="false">Next Level</string>
    <string name="level_text" translatable="false">Level %1$d</string>
    <!-- -
    This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
    For more information, see https://support.google.com/admob/answer/3052638
<!- -->
    <string name="interstitial_ad_unit_id" translatable="false">YOUR_INTERSTITIAL_AD_UNIT_ID</string>
    <string name="roLang" translatable="false">Română</string>
    <string name="engLang" translatable="false">English</string>
    <string name="search">Caută aici!</string>
    <string name="settings">Setări</string>
    <string name="search_bar_map">Caută sau apasă pe hartă</string>
    <string name="light_blue_background" translatable="false">light blue background</string>
    <string name="statistica">Statistică</string>
    <string name="defectiuni">Defecțiuni</string>
    <string name="acasa">Acasă</string>
    <string name="favorite">Favorite</string>
    <string name="donation">Susține aplicația</string>
    <string name="alege_tema">Alege tema</string>
    <string name="about">Despre</string>
    <string name="defectiuni_curente">Defecțiuni curente</string>
    <string name="harta_termografica">Hartă termică</string>
    <string name="alege_sectorul">Alege sectorul sau apasă pe căutare</string>
    <string name="motivational_text">Modifică aplicația cum îți place</string>
    <string name="watchlist">Cartierele urmărite</string>
    <string name="cele_mai_afectate_cartiere">Cele mai afectate cartiere</string>
    <string name="harta">Hartă</string>
    <string name="pornit">Termică</string>
    <string name="oprit">Standard</string>
    <!-- Preference Titles -->
    <string name="messages_header">Setări</string>
    <string name="sync_header">Ajutor</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Susține aplicația</string>

    <!-- Sync Preferences -->
    <string name="sync_title" translatable="false">Sync email periodically</string>
    <string name="attachment_title" translatable="false">Download incoming attachments</string>
    <string name="attachment_summary_on" translatable="false">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off" translatable="false">Only download attachments when manually requested</string>
    <string name="notif_status_on">Pornite</string>
    <string name="notif_status_off">Oprite</string>
    <string name="notif">Notificări</string>
    <string name="theme_status">Utilizează tema sistemului</string>
    <string name="theme_status_dark">Mod Întunecat</string>
    <string name="theme_status_light">Mod luminos</string>
    <string name="change_theme">Schimbă tema</string>
    <string name="suggestions">Am o sugestie</string>
    <string name="bug_spotting">Am găsit un bug</string>
    <string name="more_info">Mai multe informații</string>
    <string name="damage">avarii</string>
    <string name="email" translatable="false">E-mail</string>
    <string name="your_email">E-mail-ul dvs.</string>
    <string name="you_have_found_a_bug">Ai gasit un bug?</string>
    <string name="let_us_know_about_it">Anunta-ne despre asta!</string>
    <string name="phone_model">Modelul de telefon</string>
    <string name="your_phone_model">Modelul de telefon</string>
    <string name="subject">Subiectul</string>
    <string name="subject_hint_desc">Scurta descriere a bug-ului*</string>
    <string name="something_like_heatmap_doesn_t_load_n_or_app_crashes_when_i_set_notifications_on">*Descriere precum: Harta termica nu se incarca sau \n aplicatia se inchide cand pornesc notificarile</string>
    <string name="content">Continut</string>
    <string name="describe_the_bug_as_good_as_you_can">Descrie bug-ul cat de bine poti</string>
    <string name="ai_o_sugestie">Ai o sugestie?</string>
    <string name="scurta_descriere_despre_imbunatatire">Scurta descriere despre imbunatatire</string>
    <string name="descriere_precum_vreau_ca_aplicatia_sa_faca_asta">Descriere precum: Vreau ca aplicatia sa faca \"asta\"</string>
    <string name="descrie_ce_imbunatatire_vrei_sa_vezi_in_urmatoarele_versiune_ale_aquatrouble">Descrie ce imbunatatire vrei sa vezi in urmatoarele versiune ale AquaTrouble</string>
    <string name="experienta_utilizatorului_este_importanta_pentru_noi_n_te_rog_spune_ne_cum_putem_imbunatatii_aplicatia">Experienta utilizatorului este importanta pentru noi!</string>
    <string name="search_act">Căutare</string>
    <string name="search_street_address_n_or_neighborhood">Numele străzii</string>
    <string name="filter">Filtru</string>
    <string name="search_filter">Filtrul căutării</string>
    <string name="showing_damages_from">Arată avarii din:</string>
    <string name="today">Astăzi</string>
    <string name="all_time">Toate</string>
    <string name="cancel">Anulează</string>
    <string name="results">Rezultate</string>
    <string name="affected_agent">Agentul afectat</string>
    <string name="street_numbers">Numărul străzii</string>
    <string name="frequency">Afectată de</string>
    <string name="times">de ori</string>
    <string name="expected_fixing_date">Data preconizata de reparare</string>
    <string name="remaining_days_until_fix">Zile rămase până la reparare</string>
    <string name="address_was_added">Adresa a fost adaugata in sectiunea de favorite!</string>
    <string name="delete_this_address">Ai șters această adresă de la favorite!</string>
    <string name="add_to_favorites">Adaugă la favorite</string>
    <string name="show_on_map">Arată pe hartă</string>
    <string name="days_left">Zile rămase</string>
    <string name="details">Detalii</string>
    <string name="send_the_report">Trimite raportul</string>
    <string name="send_the_feedback">Trimite feedback-ul</string>
    <string name="email_address_error">Adresa de e-mail nu este corectă!</string>
    <string name="email_address_bad_format">Adresa de e-mail nu este corectă!</string>
    <string name="phone_model_error">Modelul de telefon nu poate fi lăsat liber!</string>
    <string name="subject_error">Subiectul nu poate fi lăsat gol!</string>
    <string name="content_field_error">Conținutul nu poate fi lăsat gol!</string>
    <string name="language">Limbă</string>
    <string name="Version">Versiunea</string>
    <string name="copyright_2022_flaviu_mircia_n_all_rights_reserved">© Copyright 2022, Flaviu Mircia.\n Toate drepturile rezervate!</string>
    <string name="close">Închide</string>
    <string name="support_the_app">Susține aplicația</string>
    <string name="frequent_asked_questions">Întrebări frecvente</string>
    <string name="what_is_aquatrouble">Ce este AquaTrouble?</string>
    <string name="aquatrouble_description">AquaTrouble este o aplicație menită să faciliteze mutarea în București sau alt cartier din capitală. \nAplicația crează o hartă termică cu toate avariile de apă din București, totodată AquaTrouble îți arată ce defecțiuni exista la momentul curent de timp.</string>
    <string name="how_to_add_address_to_fav">Cum adaug o adresă la favorite?</string>
    <string name="add_address_to_fav">Pentru a adăuga o adresă la favorite mergeți către meniul \"Defecțiuni curente\" apăsați pe unul dintre sectoare pentru a vă identifica adresa dorită, sau folosiți funcția de căutare din același meniu.\nApăsați pe butonul albastru \"Detalii\", iar apoi pe butonul \"Adaugă la favorite\".</string>
    <string name="cant_find_my_address">Nu găsesc adresa mea în \"Defecțiuni curente\"!</string>
    <string name="cant_find_my_address_explanation">Dacă adresa dumneavoastră nu există in secțiune \"Defecțiuni curente\", înseamnă că avaria a fost reparată sau la adresa dumneavoastră nu exista nicio avarie.</string>
    <string name="when_i_should_receive_notifications">Când voi primi notificări legate de avarie?</string>
    <string name="when_i_should_receive_notfi_explanations">Pentru a vă putea notifica cu starea avariei va trebuie ca:\n1) Adresa dorită să fie adăugată în secțiunea de \"Favorite\" a aplicației \n2) Notificările dumneavoastră să fie pornite din meniul \"Setări\", submeniul \"Notificări\" ale aplicației. \n3) Data preconizată de reparare să fie prelungită.</string>
    <string name="how_to_delete_an_address">Cum scot o adresă de la Favorite?</string>
    <string name="how_to_delete_an_address_explanation">Pentru a scoate o adresă din meniul Favorite va trebui sa apăsați o dată pe clopoțelul din dreapta adresei.</string>
    <string name="what_is_acc">Ce este ACC, respectiv ÎNC?</string>
    <string name="what_is_acc_explanation">ACC reprezintă apa caldă de consum. ÎNC reprezintă încălzirea.</string>
    <string name="street_address_is_partially_visible">Adresa străzii nu este vizibilă în totalitate!</string>
    <string name="street_address_is_partially_visible_explanation">Pentru a putea fi vizualizată pe toate dispozitivele trageți de titlul adresei din stânga către dreapta.</string>
    <string name="street_numbers_are_partially_visible">Numărul străzii nu este vizibil în totalitate!</string>
    <string name="street_numbers_are_partially_visible_explanation">Pentru a putea fi vizualizat pe toate dispozitivele trageți de numărul adresei din stânga către dreapta.</string>
    <string name="send_us_a_feedback">Vreau să comunic cu AquaTrouble pentru o îmbunătățire a aplicației.</string>
    <string name="send_us_feedback_explanation">Ne bucurăm ca vreți sa ajutați! Pentru a ne putea trimite o cerere, vă rugăm să folosiți submeniul \"Feedback\" din meniul \"Setări\".</string>
    <string name="requires_connection">Este nevoie de o conexiune activă la internet!</string>
    <string name="new_day_new_damage">O noua zi, o noua avarie</string>
    <string name="see_on_what_street">Vezi pe ce străzi nu exista apă caldă azi!</string>
    <string name="throw_an_eye">Arunca un ochi pe noile avarii!</string>
    <string name="maybe_someting_changed">Poate s-a mai schimbat ceva</string>
    <string name="there_are_no_damages">Nu există avarii în acest sector acum!</string>
</resources>