<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.SecondFragment">

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/comfortaa"
        android:text="@string/welcomeText"
        android:textSize="29sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/appDescription"
        android:layout_width="280dp"
        android:layout_height="125dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/comfortaa"
        android:text="@string/appDescr"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/welcomeText"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="@+id/welcomeText"
        app:layout_constraintTop_toBottomOf="@+id/welcomeText"
        app:layout_constraintVertical_bias="0.027" />

    <CheckBox
        android:id="@+id/tosCheckBox"
        android:layout_width="91dp"
        android:layout_height="56dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/comfortaa"
        android:text="@string/acceptCheckBox"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/continueButton"
        app:layout_constraintEnd_toEndOf="@+id/appDescription"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/appDescription"
        app:layout_constraintTop_toBottomOf="@+id/appDescription"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tosHyperlink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:fontFamily="@font/comfortaa"
        android:text="@string/tosText"
        android:textColor="#0BC1E1"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tosCheckBox"
        app:layout_constraintEnd_toEndOf="@+id/appDescription"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tosCheckBox"
        app:layout_constraintTop_toTopOf="@+id/tosCheckBox"
        app:layout_constraintVertical_bias="0.548" />

    <androidx.appcompat.widget.AppCompatButton
        style="@style/ButtonColor"
        android:id="@+id/continueButton"
        android:layout_width="116dp"
        android:layout_height="56dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/rectangle"
        android:fontFamily="@font/comfortaa"
        android:text="@string/continueButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tosHyperlink"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintStart_toStartOf="@+id/tosCheckBox" />
</androidx.constraintlayout.widget.ConstraintLayout>