<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".settings_pref_activities.BugSpotting">

    <TextView
        android:id="@+id/welcome_bug_spotting_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/comfortaa"
        android:text="@string/you_have_found_a_bug"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/info_bug_spot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/comfortaa_light"
        android:text="@string/let_us_know_about_it"
        android:textSize="17sp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/welcome_bug_spotting_text"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/welcome_bug_spotting_text"
        app:layout_constraintTop_toBottomOf="@+id/welcome_bug_spotting_text"
        app:layout_constraintVertical_bias="0.0" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info_bug_spot"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/emailTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/comfortaa"
                android:text="@string/email"
                android:textSize="17sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.037" />

            <EditText
                android:id="@+id/email_addres_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_background"
                android:backgroundTint="@color/light_grey"
                android:ems="10"

                android:fontFamily="@font/comfortaa"
                android:hint="@string/your_email"
                android:inputType="textEmailAddress"
                android:maxLength="40"
                android:minHeight="48dp"
                android:paddingStart="10dp"
                android:textColorHint="@color/black"

                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_marginTop="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/emailTextView"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/phoneModelTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/comfortaa"
                android:text="@string/phone_model"
                android:textSize="17sp"
                app:layout_constraintBottom_toTopOf="@id/phone_model_edittext"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/email_addres_edittext"
                app:layout_constraintVertical_bias="0.0" />

            <EditText
                android:id="@+id/phone_model_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_background"
                android:backgroundTint="@color/light_grey"
                android:ems="10"
                android:fontFamily="@font/comfortaa"
                android:hint="@string/your_phone_model"
                android:maxLength="40"
                android:minHeight="48dp"
                android:paddingStart="10dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_marginTop="10dp"
                android:textColorHint="@color/black"

                app:layout_constraintBottom_toTopOf="@id/subject_textview"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/phoneModelTextView"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/subject_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/comfortaa"
                android:text="@string/subject"
                android:textSize="17sp"
                app:layout_constraintBottom_toTopOf="@id/subject_edittext"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/phone_model_edittext"
                app:layout_constraintVertical_bias="0.0" />

            <EditText
                android:id="@+id/subject_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_background"
                android:backgroundTint="@color/light_grey"
                android:ems="10"
                android:fontFamily="@font/comfortaa"
                android:hint="@string/subject_hint_desc"
                android:maxLength="100"
                android:textColorHint="@color/black"

                android:minHeight="48dp"
                android:paddingStart="10dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_marginTop="10dp"

                app:layout_constraintBottom_toTopOf="@id/hint_for_subject"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/subject_textview"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/hint_for_subject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/comfortaa"
                android:text="@string/something_like_heatmap_doesn_t_load_n_or_app_crashes_when_i_set_notifications_on"
                android:textSize="12sp"
                android:textColorHint="@color/black"
                app:layout_constraintBottom_toTopOf="@id/content_textview"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/subject_edittext"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/content_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/comfortaa"
                android:text="@string/content"
                android:textSize="17sp"
                app:layout_constraintBottom_toTopOf="@id/content_edittext"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/hint_for_subject"
                app:layout_constraintVertical_bias="0.0" />

            <EditText
                android:id="@+id/content_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_background"
                android:backgroundTint="@color/light_grey"
                android:ems="10"
                android:textColorHint="@color/black"
                android:fontFamily="@font/comfortaa"
                android:gravity="start|top"
                android:hint="@string/describe_the_bug_as_good_as_you_can"
                android:inputType="textMultiLine"
                android:lines="7"
                android:textSize="14sp"
                android:maxLength="255"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/content_textview"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <Button
        android:id="@+id/sendTheRepButton"
        android:layout_width="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="Send the report"
        android:backgroundTint="@color/light_blue"
        android:background="@drawable/edittext_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

</androidx.constraintlayout.widget.ConstraintLayout>