<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottomSheet"
    android:layout_width="match_parent"
    android:background="@color/transparent"
    android:layout_height="wrap_content"
    app:behavior_hideable="true"
    android:focusable="true"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"

    >

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/filter_background" />

    <TextView
        android:id="@+id/filter_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/comfortaa"
        android:text="@string/search_filter"
        android:textColor="@color/background_white"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/background"
        app:layout_constraintStart_toStartOf="@+id/background"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/showing_damage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/comfortaa_light"
        android:text="@string/showing_damages_from"
        android:textColor="@color/background_white"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/filter_title"
        app:layout_constraintStart_toStartOf="@+id/filter_title"
        app:layout_constraintTop_toBottomOf="@+id/filter_title"
        app:layout_constraintVertical_bias="0.0" />

    <info.hoang8f.android.segmented.SegmentedGroup
        android:id="@+id/damage_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        app:layout_constraintVertical_bias="0"
        app:sc_border_width="2dp"
        app:sc_checked_text_color="@color/black"
        app:sc_corner_radius="20dp"
        app:sc_tint_color="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/background"
        app:layout_constraintEnd_toEndOf="@+id/showing_damage"
        app:layout_constraintStart_toStartOf="@+id/showing_damage"
        app:layout_constraintTop_toBottomOf="@+id/showing_damage">
        <RadioButton
            style="@style/RadioButton"
            android:id="@+id/show_current_damage"
            android:layout_width="wrap_content"
            android:fontFamily="@font/comfortaa"
            android:text="@string/today"
            android:checked="true"
            android:layout_height="40dp"/>
        <RadioButton
            style="@style/RadioButton"
            android:id="@+id/show_all_time_damage"
            android:fontFamily="@font/comfortaa"
            android:text="@string/all_time"
            android:layout_width="wrap_content"
            android:layout_height="40dp"/>

    </info.hoang8f.android.segmented.SegmentedGroup>

    <Button
        android:id="@+id/accept_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="Accept"
        android:textAllCaps="false"
        android:textColor="@color/background_white"
        android:background="@drawable/rectangle"
        android:backgroundTint="@color/light_blue"
        app:layout_constraintBottom_toBottomOf="@+id/background"
        app:layout_constraintEnd_toEndOf="@+id/damage_switch"
        app:layout_constraintStart_toStartOf="@+id/damage_switch"
        app:layout_constraintTop_toBottomOf="@+id/damage_switch"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:background="@drawable/outline_rectangle"
        android:layout_marginTop="20dp"
        android:textAllCaps="false"
        android:layout_marginBottom="20dp"
        android:textColor="@color/background_white"
        app:layout_constraintBottom_toBottomOf="@+id/background"
        app:layout_constraintEnd_toEndOf="@+id/damage_switch"
        app:layout_constraintStart_toStartOf="@+id/damage_switch"
        app:layout_constraintTop_toBottomOf="@+id/accept_button"
        app:layout_constraintVertical_bias="0.195" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/cancel_button"
        app:layout_constraintEnd_toEndOf="@+id/filter_title"
        app:layout_constraintStart_toStartOf="@+id/filter_title"
        app:layout_constraintTop_toTopOf="@+id/background"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/rectangle"
        app:tint="@color/aplha_background_white" />
</androidx.constraintlayout.widget.ConstraintLayout>